cambio color hover

--- a/css/style.css
+++ b/css/style.css
@@ -361,6 +361,7 @@ h4 {
 
 
 .formulario input[type="submit"]:hover {
-    background-color: #45a049;
+    background-color: orange
 }
 
+/*prueba git*/
