--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,7 @@ h4 {
 
 
 .formulario input[type="submit"]:hover {
-    background-color: orange
+    background-color: #ffa500
 }
 
 /*prueba git*/
